Complete home page
The first page of the portifolio website is comlete.

--- a/index.html
+++ b/index.html
@@ -41,10 +41,17 @@
     </nav> -->
     <main>
         <section class="header-section">
+            <nav class="nav-big">
+                <ul>
+                    <li class="nav-item">About Me</li>
+                    <li class="nav-item">Projects</li>
+                    <li class="nav-item">Contact Me</li>
+                </ul>
+            </nav>
             <div class="heading-container">
                 <h1>Ravijeet Singh Ahluwalia</h1>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et.</p>
+                <p>Making creative and intuitive apps that helps make the world a better place to live is my passion.
+                </p>
             </div>
             <!-- <img src="images/ravijeet.jpg" alt="Ravijeet Singh Ahluwalia"> -->
         </section>
@@ -53,18 +60,33 @@
             <div class="heading-line"></div>
             <div class="about-container">
                 <img src="images/ravijeet.jpg" alt="Ravijeet Singh">
-                <p class="about-paragraph">Being born in the family with a business in IT, as a child I was always around laptops and computers and always 
-                    had a keen interest in figuring out how they work. Many people consider exposing your child to video games as a bad thing but my father 
-                    had a reason to do so. He realized the thrust that I was having for technology and he was right. At a very early age I began editing games starting 
-                    by changing colors, textures, and then bodies of cars and boo yeah I was thrown into the world of programming.<br><br>
-                    I knew to further take my passion I need to have a degree in this domain so I graduated with a Bachelor of Technologies (Computer Science) degree. 
-                    During my time in college, I was having it hard to decide which framework to choose to create games so I literally created one game in 4 different 
-                    frameworks (Construct 2, Unity Game Engine, Corona SDK, and LibGDX) and finally released the game via libGDX.<br><br>
-                    During my graduation, I also worked as an Intern Android Developer for summertime where I was given the task to reverse engineer, 
-                    upgrade and release a game that was built in Cocos2dx (Ha-ha! another framework). The same company took me in after my graduation where 
-                    I created and released many mobile applications. I suggested and improved the work environment of the company by using MVP Architecture, 
-                    Material Designs, etc. All of the animation work was assigned to me as I had an inherent trait for that. Now I’m trying to find a direction 
-                    that can lead me into the vast world of Augmented/Virtual Reality and Gaming. </p>
+                <p class="about-paragraph"><strong class="about-header">Hey, I'm Ravijeet!<br> An Android developer
+                        based in Vancouver, Canada with over 3 years of industrial experience in mobile app
+                        development.</strong><br><br>
+                    Being born in the family with a business in IT, as a child I was always around laptops and computers
+                    and always
+                    had a keen interest in figuring out how they work. Many people consider exposing your child to video
+                    games as a bad thing but my father
+                    had a reason to do so. He realized the thrust that I was having for technology and he was right. At
+                    a very early age I began editing games starting
+                    by changing colors, textures, and then bodies of cars and boo yeah I was thrown into the world of
+                    programming.<br><br>
+                    I knew to further take my passion I need to have a degree in this domain so I graduated with a
+                    Bachelor of Technologies (Computer Science) degree.
+                    During my time in college, I was having it hard to decide which framework to choose to create games
+                    so I literally created one game in 4 different
+                    frameworks (Construct 2, Unity Game Engine, Corona SDK, and LibGDX) and finally released the game
+                    via libGDX.<br><br>
+                    During my graduation, I also worked as an Intern Android Developer for summertime where I was given
+                    the task to reverse engineer,
+                    upgrade and release a game that was built in Cocos2dx (Ha-ha! another framework). The same company
+                    took me in after my graduation where
+                    I created and released many mobile applications. I suggested and improved the work environment of
+                    the company by using MVP Architecture,
+                    Material Designs, etc. All of the animation work was assigned to me as I had an inherent trait for
+                    that.<br><br>After gaining much experience in my job I decided to move to Canada to pursue further
+                    education. I completed my post graduation diploma from Langara College, Vancouver in Web and Mobile 
+                    Application Design and Development, which further expanded my domain and enhanced my skillset.</p>
             </div>
         </section>
         <section class="skills-section">
@@ -86,69 +108,57 @@
                     </div>
                 </div>
                 <div class="skill skill3">
-                    <div class="skill-name">Javascript</div>
-                    <div class="default-bar">
-                        <div class="skill-bar skill-bar-javascript"></div>
-                    </div>
-                </div>
-                <div class="skill skill-even skill4">
-                    <div class="skill-name">HTML</div>
-                    <div class="default-bar">
-                        <div class="skill-bar skill-bar-html"></div>
-                    </div>
-                </div>
-                <div class="skill skill5">
-                    <div class="skill-name">CSS</div>
-                    <div class="default-bar">
-                        <div class="skill-bar skill-bar-css"></div>
-                    </div>
-                </div>
-                <div class="skill skill-even skill6">
-                    <div class="skill-name">MySQL</div>
-                    <div class="default-bar">
-                        <div class="skill-bar skill-bar-mysql"></div>
-                    </div>
-                </div>
-                <div class="skill skill7">
                     <div class="skill-name">Kotlin</div>
                     <div class="default-bar">
                         <div class="skill-bar skill-bar-kotlin"></div>
                     </div>
                 </div>
-                <div class="skill skill-even skill8">
-                    <div class="skill-name">SASS</div>
+                <div class="skill skill-even skill4">
+                    <div class="skill-name">Javascript</div>
                     <div class="default-bar">
-                        <div class="skill-bar skill-bar-sass"></div>
+                        <div class="skill-bar skill-bar-javascript"></div>
                     </div>
                 </div>
-                <div class="skill skill9">
-                    <div class="skill-name">JQuery</div>
-                    <div class="default-bar">
-                        <div class="skill-bar skill-bar-jquery"></div>
-                    </div>
-                </div>
-                <div class="skill skill-even skill10">
-                    <div class="skill-name">C/C++</div>
-                    <div class="default-bar">
-                        <div class="skill-bar skill-bar-cc"></div>
-                    </div>
-                </div>
-                <div class="skill skill11">
+                <div class="skill skill5">
                     <div class="skill-name">Swift</div>
                     <div class="default-bar">
                         <div class="skill-bar skill-bar-swift"></div>
                     </div>
                 </div>
-                <div class="skill skill-even skill12">
-                    <div class="skill-name">React</div>
+                <div class="skill skill-even skill6">
+                    <div class="skill-name">Objective C</div>
                     <div class="default-bar">
-                        <div class="skill-bar skill-bar-react"></div>
+                        <div class="skill-bar skill-bar-objectivec"></div>
+                    </div>
+                </div>
+                <div class="skill skill7">
+                    <div class="skill-name">MySql</div>
+                    <div class="default-bar">
+                        <div class="skill-bar skill-bar-mysql"></div>
+                    </div>
+                </div>
+                <div class="skill skill-even skill8">
+                    <div class="skill-name">Linux</div>
+                    <div class="default-bar">
+                        <div class="skill-bar skill-bar-linux"></div>
+                    </div>
+                </div>
+                <div class="skill skill9">
+                    <div class="skill-name">C/C++</div>
+                    <div class="default-bar">
+                        <div class="skill-bar skill-bar-cc"></div>
+                    </div>
+                </div>
+                <div class="skill skill-even skill10">
+                    <div class="skill-name">Lua</div>
+                    <div class="default-bar">
+                        <div class="skill-bar skill-bar-lua"></div>
                     </div>
                 </div>
             </div>
         </section>
         <section class="framework-section">
-            <div class="heading">Softwares</div>
+            <div class="heading">Softwares / Frameworks</div>
             <div class="heading-line"></div>
             <div class="softwares">
                 <div class="software-container software-android">
@@ -179,15 +189,15 @@
                     <img src="images/xcode.png" alt="xcode">
                     <div class="software-name">XCode</div>
                 </div>
-                <div class="software-container software-xd">
+                <div class="software-container software-unity">
                     <img src="images/unity.png" alt="unity">
                     <div class="software-name">Unity</div>
                 </div>
-                <div class="software-container software-photoshop">
+                <div class="software-container software-libGDX">
                     <img src="images/libgdx.png" alt="libgdx">
                     <div class="software-name">LibGDX</div>
                 </div>
-                <div class="software-container software-illustrator">
+                <div class="software-container software-corona">
                     <img src="images/corona logo.png" alt="corona">
                     <div class="software-name">Corona SDK</div>
                 </div>
