--- a/index.html
+++ b/index.html
@@ -176,7 +176,8 @@
                         <img src="images/inqli.png" alt="Inqli">
                         <div class="project-type-detail">
                             <p class="heading">Inqli</p>
-                            <p class="subheading">Platform to accelerate employee and enterprise growth with AI-powered social knowledge-sharing.</p>
+                            <p class="subheading">Platform to accelerate employee and enterprise growth with AI-powered
+                                social knowledge-sharing.</p>
                         </div>
                     </a>
 
@@ -199,6 +200,17 @@
                                 applications for iOS and Android instantly</p>
                         </div>
                     </a>
+
+                    <a class="project-type-container" href="https://discover.film/">
+                        <!-- https://www.filmfestivals.com/festival/discover_film_london_film_festival -->
+                        <img src="images/discover-film.png" alt="Discover Film">
+                        <div class="project-type-detail">
+                            <p class="heading">Discover Film</p>
+                            <p class="subheading">Watch short movies, documentaries & series, featuring Hollywood stars
+                                and emerging talent anywhere</p>
+                        </div>
+                    </a>
+
 
                     <a class="project-type-container" href="https://www.pulpstrategy.com/?portfolio=incom-mail">
                         <!-- https://twitter.com/InComMail/status/1166342556499636224/photo/1 -->
@@ -265,13 +277,15 @@
             <div class="experiences-container">
                 <div class="experience-container">
                     <div class="info">
-                        <img src="images/inqli_logo.jpeg" alt="inqli">
+                        <a class="" href="https://www.inqli.com/" target="_blank">
+                            <img src="images/inqli_logo.jpeg" alt="inqli">
+                        </a>
                         <div class="company-position">
                             <div class="company-name">Inqli Inc.</div>
                             <div class="position">Android Developer</div>
                         </div>
                         <div class="location-timing">
-                            <div class="location"></div>
+                            <div class="location">Victoria, BC</div>
                             <div class="timing">Nov 2021 - Oct 2023</div>
                         </div>
 
@@ -305,13 +319,15 @@
             <div class="experiences-container">
                 <div class="experience-container">
                     <div class="info">
-                        <img src="images/hidden-bands.jpeg" alt="hidden bands">
+                        <a class="" href="https://hiddenbands.com/" target="_blank">
+                            <img src="images/hidden-bands.jpeg" alt="hidden bands">
+                        </a>
                         <div class="company-position">
                             <div class="company-name">Hidden Bands</div>
                             <div class="position">Mobile Developer</div>
                         </div>
                         <div class="location-timing">
-                            <div class="location"></div>
+                            <div class="location">Victoria, BC</div>
                             <div class="timing">Apr 2021 - Oct 2021</div>
                         </div>
 
@@ -337,13 +353,15 @@
             <div class="experiences-container">
                 <div class="experience-container">
                     <div class="info pulp">
-                        <img src="images/pulpstrategy.png" alt="inqli">
+                        <a class="" href="https://www.pulpstrategy.com/" target="_blank">
+                            <img src="images/pulpstrategy.png" alt="inqli">
+                        </a>
                         <div class="company-position">
                             <div class="company-name">Pulpstrategy Communication Pvt. Ltd.</div>
                             <div class="position">Android Developer</div>
                         </div>
                         <div class="location-timing">
-                            <div class="location"></div>
+                            <div class="location">Delhi, India</div>
                             <div class="timing">Jul 2016 - Apr 2019</div>
                         </div>
 
@@ -380,13 +398,15 @@
             <div class="experiences-container">
                 <div class="experience-container">
                     <div class="info pulp">
-                        <img src="images/pulpstrategy.png" alt="pulpstartegy">
+                        <a class="" href="https://www.pulpstrategy.com/" target="_blank">
+                            <img src="images/pulpstrategy.png" alt="inqli">
+                        </a>
                         <div class="company-position">
                             <div class="company-name">Pulpstrategy Communication Pvt. Ltd.</div>
                             <div class="position">Android Developer Intern</div>
                         </div>
                         <div class="location-timing">
-                            <div class="location"></div>
+                            <div class="location">Delhi, India</div>
                             <div class="timing">Jun 2015 - Aug 2015</div>
                         </div>
 
